--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "echarts": "^5.6.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1"
   }
 }
